--- a/AbcTuneSampleApp/AbcTuneSampleApp.csproj
+++ b/AbcTuneSampleApp/AbcTuneSampleApp.csproj
@@ -13,4 +13,8 @@
         </Compile>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
+    </ItemGroup>
+
 </Project>
