--- a/AbcTuneTool/AbcTuneTool.csproj
+++ b/AbcTuneTool/AbcTuneTool.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <Nullable>enable</Nullable>
         <LangVersion>8.0</LangVersion>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
